tests/bug_detector_tests/loc10.js
var x = {prop1:{prop2:1}};
var y = (x["prop1"])["prop2"].a
